--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="assets/script.js" defer></script>
 
-    <link rel="icon" href="https://dvcsales.com/custom-assets/images/dvc-favicon.jpg" sizes="32x32">
-    <link rel="icon" href="https://dvcsales.com/custom-assets/images/dvc-favicon.jpg" sizes="192x192">
-    <link rel="apple-touch-icon" href="https://dvcsales.com/custom-assets/images/dvc-favicon.jpg">
+
+    <link rel="icon" href="assets/favicon-dvc.png sizes="32x32">
+    <link rel="icon" href="assets/favicon-dvc.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="assets/favicon-dvc.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
