--- a/contact-us.html
+++ b/contact-us.html
@@ -20,7 +20,7 @@
     <header class="header">
         <div class="container">
           <div class="logo">
-            <img src="assets/logo.png" alt="nt" height="50px">
+            <img style="cursor: pointer; " onclick="window.location='index.html'" src="assets/logo.png" alt="nt" height="50px">
           </div>
           <nav class="nav">
             <ul>
