--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="assets/script.js" defer></script>
 
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" href="assets/favicon-dvc.png" sizes="32x32">
     <link rel="icon" href="assets/favicon-dvc.png" sizes="192x192">
     <link rel="apple-touch-icon" href="assets/favicon-dvc.png">
@@ -1843,14 +1843,14 @@ const sellMenu = document.getElementById('sell-menu');
 const buyMenu = document.getElementById('buy-menu');
 const resortsMenu = document.getElementById('resorts-menu');
 
-// Function to hide all mega menus
+
 function hideAllMenus() {
   sellMenu.classList.remove('active');
   buyMenu.classList.remove('active');
   resortsMenu.classList.remove('active');
 }
 
-// Add hover events for each button
+
 sellMenuBtn.addEventListener("mouseenter", function () {
   hideAllMenus();
   sellMenu.classList.add('active');
@@ -1866,13 +1866,13 @@ resortsMenuBtn.addEventListener("mouseenter", function () {
   resortsMenu.classList.add('active');
 });
 
-// Ensure menus stay open when hovered
+
 [sellMenu, buyMenu, resortsMenu].forEach(menu => {
   menu.addEventListener("mouseenter", () => menu.classList.add('active'));
   menu.addEventListener("mouseleave", () => menu.classList.remove('active'));
 });
 
-// Close menus when mouse is outside header/nav
+
 document.body.addEventListener("mousemove", function (event) {
   const header = document.querySelector('header');
   if (!header.contains(event.target) &&
@@ -1885,6 +1885,6 @@ document.body.addEventListener("mousemove", function (event) {
 
 
 </script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
