--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
 
 </ul>
 </div>
-<div>
+
+<div class="first-col">
     <h6>NON WDW Resorts</h6>
    
     <div class="yellow-bg">
@@ -299,6 +300,36 @@
         </ul>
     </div>
     </div>
+    <div class="second-col">
+        <h6>Use Year</h6>
+        <button>All</button>
+        <ul>
+        <li>
+            <button>Feb</button>
+        </li>
+        <li>
+            <button>Mar</button>
+        </li>
+        <li>
+            <button>Apr</button>
+        </li>
+        <li>
+            <button>Jun</button>
+        </li>
+        <li>
+            <button>Aug</button>
+        </li>
+        <li>
+            <button>Sept</button>
+        </li>
+        <li>
+            <button>Oct</button>
+        </li>
+        <li>
+            <button>Dec</button>
+        </li>
+        </ul>
+        </div>
 </div>
 <div class="part-2">
     <div class="text-container">
