--- a/why-dvc.html
+++ b/why-dvc.html
@@ -253,54 +253,24 @@
 </div>
 </div>
 
-<section class="harpta-section container">
-<h2 class="main-title">UNDERSTANDING HARPTA</h2>
-<div>
-    <h4>What is HARPTA?</h4>
-    <p>HARPTA stands for Hawaii Real Property Tax Act. It's a Hawaii state tax withholding that applies to all real estate transactions in Hawaii. The act states that all non-resident sellers must withhold 7.25% of the "realized" price (usually the sales price) of the property and pay it directly to the Department of Taxation in Hawaii.</p>
-    <p>The purpose of HARPTA is to make sure that non-residents pay enough state income tax when someone sells a property in Hawaii. For purposes of this tax act, a non-resident is someone who's permanent or primary residence isn't in the state of Hawaii.</p>
-</div>
+<section class="resale-restrictions container">
+    <h2 class="main-title">
+        Why Use the DVC Market
+    </h2>
+    <div>
+        <p> Our commission rate is about half what others are charging. Use this saving to put more money in your pocket.</p>
+   
+   <p> We are a team of former DVC Market people with over 30 years of experience. We will provide you a Disney quality experience.</p>
+   <p>Take advantage of our modern web or mobile application and within a minute you will be ready to start receiving offers.</p>
+   <p> We will keep you updated throughout the process until you receive your payment or new deed.</p>
+    </div>
+    <div class="image-container">
+        <a href="https://dvcmarket.com/selling-strategy">
+           <img src="https://dvcmarket.com/custom-assets/images/pages/home-video-gif.gif" alt="">
+        </a>
+    </div>
 
-<div>
-    <h4>How does HARPTA apply to me?</h4>
-    <p>HARPTA applies to anyone who owns real estate property in Hawaii and is enacted when a non-resident seller wants to sell their property. HARPTA affects buyers and sellers of Hawaiian real estate transactions differently. Read below to learn how this law may impact your real estate sale.</p>
-  
-</div>
-<div>
-    <h4>Buyers</h4>
-    <p>Buyers looking to purchase a piece of property in Hawaii are responsible for withholding 7.25% of the property's sale price for the seller. If you don't withhold the correct amount and it's determined later that the sale was subject to withholding, the buyer is liable. The buyer could also face a penalty and interest on the owed amount. It's the buyer's responsibility to make the estimated tax payment on behalf of the seller. The estimated tax payment must be made no more than 20 days after the close of the sale, along with forms N-288 and N-288A.</p>
-  
-</div>
-<div>
-    <h4>Sellers</h4>
-    <p>If you are a permanent resident of Hawaii, the tax withholding may be waived. If you think you are exempt from this withholding, you must fill out Form N-289 and present it to the buyer to confirm your residency. If you're a resident of Hawaii but do not supply the buyer with this form, the buyer is still responsible for withholding the 7.25% of the realized sales price.</p>
-  
-</div>
-<div>
-    <h4>Refunds</h4>
-    <p>If the estimated withholding is more than your actual tax liability for the sale of the property, you may request a refund. The first step in the refund process is to file a Hawaii state income tax return at the end of the year. There are some circumstances where you may be able to apply for a refund earlier than the state income tax form is available</p>
-    <p>You may qualify for a partial refund if specific criteria are met, like in the scenario below:</p>
-    <p>A non-resident of Hawaii sells a contract for $15,000. The seller originally paid $13,000. The buyer will submit a payment (7.25% x 15,000 = $1,087.50) to the state. However, the seller may only owe $145.00 in taxes based on the $2,000 in profit that was made. The seller will apply for an estimated partial refund of 942.50. A non-resident of Hawaii sells a contract for $15,000. The seller originally paid $13,000. The buyer will submit a payment (7.25% x 15,000 = $1,087.50) to the state. However, the seller may only owe $145.00 in taxes based on the $2,000 in profit that was made. The seller will apply for an estimated partial refund of 942.50.</p>
-    <p>In certain situations, you may request and receive a refund in full. This usually happens when there wasn't a profit made on the sale of the property. Consider the situation below:</p>
-    <p>A non-resident of Hawaii sells a contract for $10,000. The seller originally paid $13,000 for the contract. At closing, a payment of $725.00 will be submitted to the state. The seller applies and receives a full refund because they made no profit on the transaction.</p>
-    <p>Any overpayment will be refunded after the state income tax return is filed. If there are other taxes (like capital gains) that apply to the sale of the property, you may end up owing more than the initial withholding and will be responsible for the additional payment.</p>
-  
-</div>
-<div>
-    <h4>How do I avoid HARPTA withholding?</h4>
-    <p>There are a few ways to avoid the HARPTA tax withholding during the sale of property in Hawaii:</p>
-    <p>1. The seller is a resident of Hawaii and presented the buyer with the correct form (N-298) to confirm their residency.</p>
-    <p>2. The property was the seller's primary residence for a year prior to the sale, and the "realized" sales price is less than $300,000.</p>
-    <p>3. The gain from selling the property is not taxable, as defined by the Hawaiian and federal government.</p>
-</div>
-<div>
-    <h4>
-        How does HARPTA affect DVC members?
-    </h4>
-    <p>Most DVC members who own at Aulani and want to sell their DVC membership will need to have HARPTA taken out of their final seller's payment. The only exception is if you own at Aulani, are a resident of Hawaii, and present the buyer with the correct form. It's the buyer's responsibility to withhold 7.25% of the sales price for the seller. Then, the seller may apply for a refund separately. In most cases, DVC members may be eligible for a full refund since there may not be profit made due to the sale.</p>
-    <p>Don't worry. When you use DVC Market to sell your Aulani DVC membership, our title company will withhold 7.25% of the sales price and send it to the Department of Taxation themselves. Sellers then have the option to have our title company submit the forms to apply a refund for an additional fee.</p>
-    <p>Note: this article is for informational purposes only and is not intended as legal advice. Please seek the guidance of a tax or legal professional for insight on your particular situation.</p>
-</div>
+   
 </section>
 <footer class="app-footer">
 
@@ -484,6 +454,11 @@ document.body.addEventListener("mousemove", function (event) {
       button.classList.add('active');
     });
   });
+  function toggleBox(boxId, btn) {
+      const box = document.getElementById(boxId);
+      box.classList.toggle('expanded');
+      btn.innerText = box.classList.contains('expanded') ? 'READ LESS' : 'READ MORE';
+    }
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
