--- a/resorts.html
+++ b/resorts.html
@@ -254,7 +254,7 @@
     <div class="resort-container">
 
         <!-- Resort Card 1 -->
-        <div class="resort-card">
+        <div onclick="window.location='resort_animal-kingdom.html'" class="resort-card">
           <img src="https://dvcmarket.com/assets/images/resorts-images/animal-kingdom.jpg" alt="Animal Kingdom" />
           <div class="resort-title">Animal Kingdom</div>
           <div class="resort-hover">
@@ -268,7 +268,7 @@
         </div>
   
         <!-- Resort Card 2 -->
-        <div class="resort-card">
+        <div onclick="window.location='resort_aulani.html'" class="resort-card">
           <img src="https://dvcmarket.com/assets/images/resorts-images/aulani.jpeg" alt="Aulani Resort" />
           <div class="resort-title">Aulani Resort</div>
           <div class="resort-hover">
@@ -281,7 +281,7 @@
         </div>
   
         <!-- Resort Card 3 -->
-        <div class="resort-card">
+        <div onclick="window.location='resort_baylake-tower.html'" class="resort-card">
           <img src="https://dvcmarket.com/assets/images/resorts-images/baylake.webp" alt="Bay Lake Tower" />
           <div class="resort-title">Bay Lake Tower</div>
           <div class="resort-hover">
@@ -294,7 +294,7 @@
         </div>
   
         <!-- Resort Card 4 -->
-        <div class="resort-card">
+        <div onclick="window.location='resort_beach-club-villas.html'" class="resort-card">
           <img src="https://dvcmarket.com/assets/images/resorts-images/beach-club.jpg" alt="Beach Club Villas" />
           <div class="resort-title">Beach Club Villas</div>
           <div class="resort-hover">
@@ -307,7 +307,7 @@
         </div>
   
         <!-- Resort Card 5 -->
-        <div class="resort-card">
+        <div onclick="window.location='resort_boardwalk-villas.html'" class="resort-card">
           <img src="https://dvcmarket.com/assets/images/resorts-images/boardwalk.jpg" alt="Boardwalk Villas" />
           <div class="resort-title">Boardwalk Villas</div>
           <div class="resort-hover">
@@ -320,7 +320,7 @@
         </div>
   
         <!-- Resort Card 6 -->
-        <div class="resort-card">
+        <div onclick="window.location='resort_boulder-ridge.html'" class="resort-card">
           <img src="https://dvcmarket.com/assets/images/resorts-images/boulder-ridge.webp" alt="Boulder Ridge" />
           <div class="resort-title">Boulder Ridge</div>
           <div class="resort-hover">
@@ -333,7 +333,7 @@
         </div>
   
         <!-- Resort Card 7 -->
-        <div class="resort-card">
+        <div onclick="window.location='resorts_copper-creek.html'" class="resort-card">
           <img src="https://dvcmarket.com/assets/images/resorts-images/copper.webp" alt="Copper Creek" />
           <div class="resort-title">Copper Creek</div>
           <div class="resort-hover">
