--- a/compare-dvc-brokers.html
+++ b/compare-dvc-brokers.html
@@ -134,7 +134,7 @@
         <svg fill="#ffffff" onclick="openMenu()" height="200px" width="200px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1792 1792" xml:space="preserve" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>fiction</title> <path d="M1673.9,1363.2L1673.9,1363.2c0,52.3-42.4,94.3-94.3,94.3H212.7c-52.3,0-94.3-42.4-94.3-94.3l0,0 c0-52.3,42.4-94.3,94.3-94.3h1366.8C1631.5,1268.5,1673.9,1310.9,1673.9,1363.2z"></path> <path d="M1673.9,895.6L1673.9,895.6c0,52.3-42.4,94.3-94.3,94.3H659c-52.3,0-94.3-42.4-94.3-94.3l0,0c0-52.3,42.4-94.3,94.3-94.3 h920.6C1631.5,800.8,1673.9,843.2,1673.9,895.6z"></path> <path d="M1673.9,427.9L1673.9,427.9c0,52.3-42.4,94.3-94.3,94.3H212.7c-52.3,0-94.3-42.4-94.3-94.3l0,0c0-52.3,42.4-94.3,94.3-94.3 h1366.8C1631.5,333.2,1673.9,375.6,1673.9,427.9z"></path> </g></svg>
       </div>
       <div class="cta">
-        <a href="https://dvcsales.com/sign-up" class="cta-btn">Add Membership to Sell</a>
+        <a href="sign-up.html" class="cta-btn">Add Membership to Sell</a>
    
       </div>
     </div>
@@ -150,7 +150,7 @@
           <li><a href="contact-us.html">Contact Us</a></li>
 
                 <li>
-                    <a href="https://dvcsales.com/sign-up" class="cta-btn">Add Membership to Sell</a>
+                    <a href="sign-up.html" class="cta-btn">Add Membership to Sell</a>
                 </li>
           
         </ul>
@@ -318,7 +318,7 @@
         <p><strong>What about the fees?</strong> There are typically 2 fees associated with selling a DVC contract: a $150 fee to Disney and a commission to the resale broker. Many resale brokers claim that these are the only fees for sellers, but they allow the buyer to negotiate who pays the closing costs (average $700 or so) and also allow the buyer to negotiate not reimbursing the seller for the annual dues for the current year.</p>
         <p><strong>How is DVC Market different?</strong> Unlike every other resale broker, we don't allow buyers to negotiate who pays these fees. Just as we would not expect the seller to ask the buyer to pay our fee, we think it's fair that the seller is compensated for the dues on the points that are currently available for the current year- why pay dues on points you don't get to use?</p>
         <p><strong>Doing the math.</strong> The demonstration above allows sellers to input the approximate price of their membership to see the difference in their bottom line cost of selling their contract and how the fees add up. You may find it surprising that with a commission fee of only 1/2% higher, that if the seller ultimately pays the closing costs and is not reimbursed for the dues, the difference can be over $2,300 on a $20,000 contract. This may not be apparent when listing your membership initially, but the difference is substantial.</p>
-  <a href="https://dvcsales.com/sign-up">  <button>LIST MY MEMBERSHIP</button> </a>
+  <a href="sign-up.html">  <button>LIST MY MEMBERSHIP</button> </a>
     </div>
     <div class="image-area">
 <img src="https://dvcmarket.com/custom-assets/images/resorts/AK/3.jpg" alt="">
