--- a/cost-to-sell-dvc.html
+++ b/cost-to-sell-dvc.html
@@ -134,7 +134,7 @@
         <svg fill="#ffffff" onclick="openMenu()" height="200px" width="200px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1792 1792" xml:space="preserve" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>fiction</title> <path d="M1673.9,1363.2L1673.9,1363.2c0,52.3-42.4,94.3-94.3,94.3H212.7c-52.3,0-94.3-42.4-94.3-94.3l0,0 c0-52.3,42.4-94.3,94.3-94.3h1366.8C1631.5,1268.5,1673.9,1310.9,1673.9,1363.2z"></path> <path d="M1673.9,895.6L1673.9,895.6c0,52.3-42.4,94.3-94.3,94.3H659c-52.3,0-94.3-42.4-94.3-94.3l0,0c0-52.3,42.4-94.3,94.3-94.3 h920.6C1631.5,800.8,1673.9,843.2,1673.9,895.6z"></path> <path d="M1673.9,427.9L1673.9,427.9c0,52.3-42.4,94.3-94.3,94.3H212.7c-52.3,0-94.3-42.4-94.3-94.3l0,0c0-52.3,42.4-94.3,94.3-94.3 h1366.8C1631.5,333.2,1673.9,375.6,1673.9,427.9z"></path> </g></svg>
       </div>
       <div class="cta">
-        <a href="https://dvcsales.com/sign-up" class="cta-btn">Add Membership to Sell</a>
+        <a href="sign-up.html" class="cta-btn">Add Membership to Sell</a>
    
       </div>
     </div>
@@ -150,7 +150,7 @@
           <li><a href="contact-us.html">Contact Us</a></li>
 
                 <li>
-                    <a href="https://dvcsales.com/sign-up" class="cta-btn">Add Membership to Sell</a>
+                    <a href="sign-up.html" class="cta-btn">Add Membership to Sell</a>
                 </li>
           
         </ul>
@@ -294,7 +294,7 @@
 
     </div>
     <p class="instruction-text">Are there any other costs associated with selling? Yes, but those fees belong to the buyer. Our buyers are responsible for all closing costs as well as reimbursing the seller for the dues for the current year- based on the number of points still available and bankable.See the Compare Brokares page for additional details and calculate saving by using DVC Market</p>
-    <a href="https://dvcsales.com/sign-up">  <button>LIST MY MEMBERSHIP</button> </a>
+    <a href="sign-up.html">  <button>LIST MY MEMBERSHIP</button> </a>
 </section>
 <footer class="app-footer">
 
