--- a/resale-restrictions.html
+++ b/resale-restrictions.html
@@ -307,7 +307,7 @@ font-size: 13px !important  ;
                   <tbody>
                       <tr>
                           <td>
-                              16 Disneyland Hotel 
+                              14 Original DVC Resorts
                             
                           </td>
                           <td class="text-center">
@@ -326,7 +326,7 @@ font-size: 13px !important  ;
                       <tr>
                           <td>
                               15 Riviera Resorts (2019)<br>
-                              16 Disneyland Villas (2023)<br>
+                              16 Disneyland Hotel (2023)<br>
                               17 Disney Campground (2024)
                           </td>
                           <td class="text-center">
